# crib_back

./: .env.example  .gitignore  API_README.md  COMPLETION_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  MATCH_STATS_README.md  QUICK_START.md  README.md  app.py  best-ai.json  best-ai.pt  conftest.py  database.py  debug_test.py  dev-requirements.txt  pyproject.toml  railway.json  requirements.txt  test_ai_opponents.py  test_api.py  test_scoring_messages.py  to do.txt
.github/: copilot-instructions.md
crib_api/: opponents.py  single_player.py
cribbage/: bestai_opponent.py  connection_manager.py  cribbagegame.py  game_state.py  models.py  opponents.py  player.py  scoring.py  single_player.py
docs/: DATABASE_MIGRATION.md  DATABASE_README.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  MATCH_STATS_IMPLEMENTATION.md  PER_GAME_STATS_SUMMARY.md  QUICK_START_USER_ID.md  STATS_QUICK_REF.md  USER_ID_IMPLEMENTATION.md
models/: manifest.json  model_report.json
scripts/: copy_hand_crib_db.py
test/: test_api.py  test_cribbagegame.py  test_hand_score.py  test_new_api.py  test_score_points.py  test_scoring.py  test_scoring_flush.py  test_turn_order.py
tests/: test_31_scoring_bug_unchecked.py  test_ad_entitlement_api.py  test_advanced_stats.py  test_api.py  test_api_round.py  test_database.py  test_end_game_simple.py  test_end_game_unchecked.py  test_end_game_with_round_summary.py  test_game_flow.py  test_game_stats_summary.py  test_go_scenarios.py  test_initial_scores.py  test_integration.py  test_recent_play_events.py  test_recent_play_events_31.py  test_scoring_phase_end_game.py  (+2 more)
(+15 files in other folders)
