[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cribbage"
version = "0.0.0"
description = "Cribbage game library"
authors = [{ name = "johnm" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cribbage-engine @ ../cribbage-engine",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["cribbage*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
lint.select = ["F401"]  # F401 = unused imports
fix = true